...
    <string name="mapbox_public_access_token">pk.eyJ1IjoiYmlnb3dsIiwiYSI6ImNraHZlODJ5YzFjdDMyc295azJ1YTdwZWQifQ.yqOHWYeuQPXphvSkx2NAQA</string>

    <string name="app_name">BigOwlApp</string>

    <string name="send_sms">send sms</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="group_name">Group Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_search_user">Search user…</string>
    <string name="home">Home</string>
    <string name="image_url">Image URL</string>
...
